# bahasa

./: .gitignore  README.md  pyproject.toml  requirements.txt
bahasa/: __main__.py  main.py  video_capture.py
bahasa/image_pipeline/: base.py  cascade_face_recog.py  nn_face_recog.py
models/nn_exp/: events.out.tfevents.1681399083.2a75ee155d57.4240.0  opt.yaml  results.csv
notebooks/: test_opencv_classifier.ipynb
