[tool.poetry]
name = "bahasa"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
