[tool.poetry]
name = "bahasa"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
torch = "^2.0.0"
gitpython = "^3.1.31"
matplotlib = "^3.7.1"
psutil = "^5.9.4"
pyyaml = "^6.0"
requests = "^2.28.2"
scipy = ">=1.4.1"
thop = "^0.1.1.post2209072238"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
tensorboard = "^2.12.2"
pandas = "^2.0.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
